# taipy

./: Pipfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml  other.yml  refactor-code.yml
.github/actions/install/: action.yml
.github/workflows/: build-and-release-single-package.yml  build-and-release.yml  partial-tests.yml  publish.yml
frontend/taipy/: package-lock.json
frontend/taipy-gui/: package-lock.json
taipy/common/config/: config.pyi
taipy/core/: _init.py  taipy.py
taipy/core/_entity/: _reload.py
taipy/core/config/: data_node_config.py
taipy/core/data/: _data_manager.py  csv.py  data_node.py  sql.py
taipy/core/exceptions/: exceptions.py
taipy/core/scenario/: scenario.py
taipy/core/task/: _task_manager.py
taipy/gui/: pyproject.toml  server.py  viselements.json
taipy/gui/_renderers/: builder.py
taipy/gui/data/: content_accessor.py
tests/core/: conftest.py
tests/core/_entity/: test_reload.py
tests/core/config/: test_config_serialization.py  test_configure_default_config.py
tests/core/data/: test_csv_data_node.py  test_data_manager.py  test_data_node.py  test_in_memory_data_node.py  test_json_data_node.py  test_pickle_data_node.py  test_read_csv_data_node.py  test_read_excel_data_node.py  test_read_parquet_data_node.py  test_sql_data_node.py  test_write_csv_data_node.py
tests/core/job/: test_job.py
tests/rest/: conftest.py  test_task.py
tools/: coverage_check.py
tools/gui/: generate_pyi.py
tools/release/: common.py
(+22 files in other folders)
