[build-system]
requires = ["setuptools>=76", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taipy-gui"
description = "Low-code library to create graphical user interfaces on the Web for your Python applications."
readme = "package_desc.md"
requires-python = ">=3.9,<3.13"
license = "Apache-2.0"
authors = [{name = "Avaiga", email = "dev@taipy.io"}]
keywords = ["taipy", "gui", "taipy-gui"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.packages]
find = {include = ["taipy", "taipy.gui", "taipy.gui.*"]}

[project.optional-dependencies]
ngrok = ["pyngrok>=5.1,<6.0"]
image = [
    "python-magic>=0.4.24,<0.5;platform_system!='Windows'",
    "python-magic-bin>=0.4.14,<0.5;platform_system=='Windows'",
]
arrow = ["pyarrow>=16.0.0,<19.0"]
test = ["pytest>=6.0"]

[project.urls]
Homepage = "https://github.com/Avaiga/taipy"
